# SuperWeb2PDF

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
extension/: manifest.json  popup.html  popup.js
extension/icons/: README.md
superweb2pdf/: __init__.py  api.py  backends.py  cli.py  errors.py  options.py  progress.py  result.py  souwen_client.py  souwen_handler.py  souwen_plugin.py
superweb2pdf/capture/: __init__.py  applescript.py  cdp.py  file_input.py  headless.py  watcher.py
superweb2pdf/core/: __init__.py  image_utils.py  pdf_builder.py  splitter.py
superweb2pdf/souwen/: __init__.py  client.py  handler.py  plugin.py
tests/: test_api.py  test_backends.py  test_cli.py  test_core.py  test_errors.py  test_file_input.py  test_image_utils.py  test_options.py  test_pdf_builder.py  test_progress.py  test_souwen_plugin.py  test_splitter.py
