[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superweb2pdf"
version = "0.1.0"
description = "Convert full-page web screenshots to intelligently paginated PDFs"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=12.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
capture = [
    "playwright>=1.40",
]
watch = [
    "watchdog>=4.0",
]
all = [
    "superweb2pdf[capture,watch]",
]

[project.scripts]
s2p = "superweb2pdf.cli:main"

[tool.setuptools.packages.find]
include = ["superweb2pdf*"]
