[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superweb2pdf"
version = "0.1.0"
description = "Convert full-page web screenshots to intelligently paginated PDFs"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "BlueSkyXN"}]
requires-python = ">=3.10"
dependencies = [
    "Pillow>=12.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
capture = [
    "playwright>=1.40",
]
watch = [
    "watchdog>=4.0",
]
all = [
    "superweb2pdf[capture,watch]",
]

[project.scripts]
superweb2pdf = "superweb2pdf.cli:main"

[tool.setuptools.packages.find]
include = ["superweb2pdf*"]
